# NGT_Sign_Language

./: .amlignore  .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  alembic.ini  conda.yaml  env.example  genindex.html  index.html  installation.html  objects.inv  package-lock.json  py-modindex.html  pyproject.toml  search.html  searchindex.js  sweep_config.json.example  usage.html
.doctrees/: index.doctree  installation.doctree  usage.doctree
.doctrees/reference/: modules.doctree  sign_langauge_azure_api.doctree  sign_language.api.doctree  sign_language.auth.doctree  sign_language.core.doctree  sign_language.db.doctree  sign_language.doctree  sign_language.features.doctree  sign_language.models.doctree  sign_language.training.doctree  sign_language.utils.doctree  sign_language_training.doctree
.github/workflows/: code-quality.yml  deploy-azure.yml  deploy-onprem.yml  deploy-promoted-model.yml  docker-build.yml  documentation.yml  promote-model.yml
_modules/: index.html
_modules/sign_language/api/: app.html  schemas.html  state.html
_modules/sign_language/auth/: manager.html  models.html  schemas.html  users.html  ws_auth.html
_modules/sign_language/core/: hand_tracking.html  image_transforms.html  inference.html  logging.html  preprocessing.html  settings.html
_modules/sign_language/db/: engine.html
_modules/sign_language/features/: landmarks.html
_modules/sign_language_azure_api/: app.html  client.html  main.html  schemas.html  settings.html
_modules/sign_language_training/: augmentation.html  configuration.html  data_loading.html  model_definitions.html  model_evaluation.html  model_registration.html  model_training.html  preprocessing.html  run_naming.html  runtime.html  settings.html  train.html
_sources/: index.rst.txt
_sources/reference/: sign_language.api.rst.txt  sign_language.core.rst.txt  sign_language.features.rst.txt  sign_language.rst.txt  sign_language.utils.rst.txt  sign_language_training.rst.txt
dags/: ngt_retraining_dag.py
deployment/: score_common.py
deployment/online/: environment.yml  score.py
docker/: nginx.frontend.conf
docker/compose/: docker-compose.airflow.yml  docker-compose.azure.yml  docker-compose.mlflow.yml  docker-compose.onprem.yml  docker-compose.training.yml  docker-compose.yml
docker/dockerfiles/: Dockerfile.airflow  Dockerfile.azure-api  Dockerfile.backend  Dockerfile.frontend  Dockerfile.training
docs/: azure_cicd_training_plan.md  conf.py  installation.rst  usage.rst
docs/reference/: modules.rst  sign_langauge_azure_api.rst  sign_language.auth.rst  sign_language.db.rst  sign_language.models.rst  sign_language.training.rst
documentation/data-pipeline/: data-pipeline-design.md
documentation/installation-instructions/: backend.md  frontend.md  training.md
documentation/package-plan/: README.md  azure-api.md  backend-api.md  frontend.md  training.md
models/: best_landmark_mlp.pth  best_ngt_model_v2.pth
reference/: modules.html  sign_langauge_azure_api.html  sign_language.api.html  sign_language.auth.html  sign_language.core.html  sign_language.db.html  sign_language.features.html  sign_language.html  sign_language.models.html  sign_language.training.html  sign_language.utils.html  sign_language_training.html
scripts/: README_azure_scripts.md  check_data_change_and_train.py  check_training_triggers.py  check_training_triggers_local.py  create_training_schedule.py  deploy_online_endpoint.py  endpoint_common.py  finalize_completed_sweeps.py  get_azure_mlflow_uri.py  invoke_online_endpoint.py  live_test.py  promote_mlflow_champion.py  promote_model.py  register_data_splits.py  register_env.py  register_raw_data.py  rollout_blue_green.py  rollout_canary.py  run_local_pipeline.py  smoke_test.py  submit_pipeline.py  submit_sweep_job.py  submit_training_job.py  test_online_endpoint.py  trigger_training.py  upload_to_mlflow.py  upload_training_data_mlflow.py
src/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/sign_language/: __init__.py  cli.py  main.py
src/sign_language_azure_api/: __init__.py  app.py  client.py  collection.py  main.py  schemas.py  settings.py
src/sign_language_training/: __init__.py  augmentation.py  azure_config.py  configuration.py  data_loading.py  logging_utils.py  model_definitions.py  model_evaluation.py  model_registration.py  model_training.py  preprocessing.py  pyproject.toml  run_naming.py  runtime.py  settings.py  train-env-gpu.yml  train.py
src/sign_language_training/orchestration/: __init__.py  dataset_inventory.py  mlflow_trigger_policy.py  pipeline_submitter.py  sweep_finalizer.py  sweep_submitter.py  training_state.py  trigger_policy.py
src/sign_language_training/trigger_api/: __init__.py  app.py  schemas.py  security.py  settings.py
tests/: __init__.py  conftest.py  test_cli.py  test_logging.py  test_main.py  test_package.py
tests/api/: conftest.py  test_app.py  test_monitoring.py  test_routes.py  test_schemas.py  test_state.py  test_ws.py
tests/azure_api/: __init__.py  test_app.py  test_client.py  test_collection.py  test_main_settings.py  test_online_endpoint_script.py
tests/core/: test_inference.py  test_preprocessing.py  test_settings.py
tests/deployment/: __init__.py  test_rollout_blue_green.py  test_rollout_canary.py  test_score_common.py
tests/features/: test_landmarks.py
tests/models/: test_architectures.py  test_loader.py
tests/test_sign_language_training/: test_azure_config.py  test_check_training_trigger_local.py  test_configuration.py  test_data_loading.py  test_local_pipeline.py  test_logging_utils.py  test_mlflow_trigger_policy.py  test_model_definitions.py  test_model_evaluation.py  test_model_registration.py  test_model_training.py  test_orchestration.py  test_preprocessing_runtime.py  test_run_naming.py  test_runtime_and_data_loading.py  test_sweep_finalizer.py  test_train.py  test_train_workflow.py
tests/trigger_api/: conftest.py  test_app.py  test_routes.py
tests/utils/: test_sequence.py  test_smoothing.py
(+84 files in other folders)
